# project-m1-impl

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .env.sample  .gitattributes  .gitignore  .markdownlintignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: Dockerfile  devcontainer.json  init.bat  init.sh
.githooks/: pre-commit
.github/workflows/: ci.yml
cmake/toolchains/: raspberrypi-aarch64.cmake
config/: config.cfg
hooks/: pre-commit
include/hardware/: .clang-tidy  Buzzer.hpp  Led.hpp  LedColor.hpp  Reading.hpp  Sensor.hpp
include/warden/: AveragingBuffer.hpp  Buzzer.hpp  Config.hpp  ConfigLoader.hpp  Led.hpp  LedColor.hpp  Reading.hpp  Sensor.hpp  State.hpp  StateMachine.hpp  WardenApp.hpp
src/: ConfigLoader.cpp  StateMachine.cpp  WardenApp.cpp  main.cpp
src/core/: AveragingBuffer.hpp  BlockingQueue.hpp  Config.hpp  ConfigLoader.cpp  ConfigLoader.hpp  State.hpp  StateMachine.cpp  StateMachine.hpp  Transition.hpp  WardenApp.cpp  WardenApp.hpp
src/hardware/buzzer/: GpioBuzzer.cpp  GpioBuzzer.hpp  GpioPin.cpp  GpioPin.hpp
src/hardware/led/: StatusLed.cpp  StatusLed.hpp  SysfsLed.cpp  SysfsLed.hpp
src/hardware/sensor/: Dht22Sensor.cpp  Dht22Sensor.hpp
src/sim/: SimSensor.hpp  StubBuzzer.hpp  StubLed.hpp
tests/: .clang-tidy  CMakeLists.txt  test_averaging.cpp  test_state_machine.cpp  test_transition.cpp  test_warden_app.cpp
tests/mocks/: MockBuzzer.hpp  MockLed.hpp  MockSensor.hpp
tools/: connect.sh  deploy.sh  run.sh  setup-ssh.sh  test.sh
tools/pi/: bootstrap.sh  connect.sh  debug.sh  deploy.sh  run.sh  test.sh
tools/pi/init/: 01-setup-ssh.sh  02-bootstrap.sh
